# kisansetu

./: README.md  SUBMISSION.md  app.py  pyproject.toml
.github/workflows/: ci.yml  tests.yml
examples/: demo.py
src/kisansetu/: __init__.py  backends.py  core.py  knowledge.py
tests/: test_kisansetu.py  test_unittest.py
